// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grammar carriers: bands, edges, states, fringe (test 12) > canonical-view snapshot for rendererConfig v1 (checked in per version) 1`] = `
{
  "edges": [
    {
      "confidence": 0.7,
      "confidenceBand": "medium",
      "dashed": false,
      "id": "e-1",
      "opacity": 0.7749999999999999,
      "sourceId": "n-active",
      "targetId": "n-ghost",
      "type": "DRIVES",
      "weight": 2,
    },
  ],
  "fringe": {
    "copy": "This map shows only what your words have touched — the rest of the sky is still unexplored.",
    "treatment": "soft-gradient",
  },
  "matchLinks": [],
  "nodes": [
    {
      "brightness": 0.9330329915368074,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": false,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-active",
      "label": "active extracted",
      "opacity": 0.87,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 5.772588722239782,
      "state": "ACTIVE",
      "struck": false,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.37321319661472296,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": true,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-contra",
      "label": "contradicted",
      "opacity": 0.87,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 5.772588722239782,
      "state": "CONTRADICTED",
      "struck": true,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.075,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": true,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-dormant",
      "label": "dormant",
      "opacity": 0.87,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 5.772588722239782,
      "state": "DORMANT",
      "struck": false,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.15,
      "confidence": 0.2,
      "confidenceBand": "low",
      "dimmed": false,
      "draftWatermark": true,
      "evidenceCount": 0,
      "ghost": {
        "badge": "hypothesis",
        "dashedRing": true,
      },
      "id": "n-ghost",
      "label": "lens ghost — draft reading",
      "opacity": 0.48,
      "provenance": "LENS",
      "provenanceCopy": "From your chart — nothing in your words yet confirms this.",
      "ringWidth": 3,
      "saturation": 0.45,
      "size": 3,
      "state": "HYPOTHESIS",
      "struck": false,
      "type": "TRAIT",
      "veiled": false,
    },
    {
      "brightness": 0.9330329915368074,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": false,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-wound",
      "label": "Something to explore together next session",
      "opacity": 0.87,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 5.772588722239782,
      "state": "ACTIVE",
      "struck": false,
      "type": "WOUND",
      "veiled": true,
    },
  ],
  "now": "2026-07-14T12:00:00.000Z",
  "projectionVersion": "v1",
  "rendererConfigVersion": "v1",
  "seed": "user-seed-42",
}
`;

exports[`grammar carriers: bands, edges, states, fringe (test 12) > canonical-view snapshot for rendererConfig v2 (checked in per version) 1`] = `
{
  "edges": [
    {
      "confidence": 0.7,
      "confidenceBand": "medium",
      "dashed": false,
      "id": "e-1",
      "opacity": 0.7749999999999999,
      "sourceId": "n-active",
      "targetId": "n-ghost",
      "type": "DRIVES",
      "weight": 2,
    },
  ],
  "fringe": {
    "copy": "This map shows only what your words have touched — the rest of the sky is still unexplored.",
    "treatment": "soft-gradient",
  },
  "matchLinks": [],
  "nodes": [
    {
      "brightness": 0.9330329915368074,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": false,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-active",
      "label": "active extracted",
      "opacity": 0.92,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 11.772588722239782,
      "state": "ACTIVE",
      "struck": false,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.37321319661472296,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": true,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-contra",
      "label": "contradicted",
      "opacity": 0.92,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 11.772588722239782,
      "state": "CONTRADICTED",
      "struck": true,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.2,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": true,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-dormant",
      "label": "dormant",
      "opacity": 0.92,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 11.772588722239782,
      "state": "DORMANT",
      "struck": false,
      "type": "PATTERN",
      "veiled": false,
    },
    {
      "brightness": 0.4,
      "confidence": 0.2,
      "confidenceBand": "low",
      "dimmed": false,
      "draftWatermark": true,
      "evidenceCount": 0,
      "ghost": {
        "badge": "hypothesis",
        "dashedRing": true,
      },
      "id": "n-ghost",
      "label": "lens ghost — draft reading",
      "opacity": 0.6799999999999999,
      "provenance": "LENS",
      "provenanceCopy": "From your chart — nothing in your words yet confirms this.",
      "ringWidth": 3,
      "saturation": 0.45,
      "size": 9,
      "state": "HYPOTHESIS",
      "struck": false,
      "type": "TRAIT",
      "veiled": false,
    },
    {
      "brightness": 0.9330329915368074,
      "confidence": 0.8,
      "confidenceBand": "high",
      "dimmed": false,
      "draftWatermark": false,
      "evidenceCount": 1,
      "ghost": null,
      "id": "n-wound",
      "label": "Something to explore together next session",
      "opacity": 0.92,
      "provenance": "EXTRACTED",
      "provenanceCopy": null,
      "ringWidth": 1,
      "saturation": 1,
      "size": 11.772588722239782,
      "state": "ACTIVE",
      "struck": false,
      "type": "WOUND",
      "veiled": true,
    },
  ],
  "now": "2026-07-14T12:00:00.000Z",
  "projectionVersion": "v1",
  "rendererConfigVersion": "v2",
  "seed": "user-seed-42",
}
`;
